correcting css alignment issues

--- a/layouts/mobile.css
+++ b/layouts/mobile.css
@@ -647,7 +647,7 @@
     left: 14%;
   }
 
-  .d-header__hero {
+  /* .d-header__hero {
     left: 21%;
     top: 10%;
   }
@@ -675,7 +675,7 @@
   .d-header__numbers--5 {
     top: 14%;
     left: 65%;
-  }
+  } */
 
   .d-footer__content--textarea {
     margin: 0 3%;
